<resources>
    <string name="app_name">Gestor de asesorias</string>
    <string name="title_activity_alta_alumno">AltaAlumnoActivity</string>
    <string name="inputAlumnoQr">QR</string>
    <string name="reportealumnos">Reporte Alumno</string>
    <string-array name="horas">


        <item>horas</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>

    </string-array>

    <string-array name="materia">
        <item>Materia</item>
        <item>Literatura</item>
        <item>Historia Universal</item>
        <item>Geografía</item>
        <item>Español</item>
        <item>Historia de México</item>
        <item>Biología</item>
        <item>Química</item>
        <item>Matemáticas</item>
        <item>Física</item>
        <item>Comprensión Lectora</item>
        <item>Historia Universal</item>
        <item>TICS</item>
        <item>Derecho</item>
        <item>Economía</item>
        <item>Administración</item>
        <item>Inglés</item>
        <item>Psicología</item>
        <item>Estadistica</item>
        <item>Pensamiento Analítico</item>
    </string-array>

    <string-array name="alumnos">

    </string-array>

    <string name="title_activity_alta_maestros">AltaMaestrosActivity</string>
    <string name="buscar">buscar</string>
    <string name="action_settings">Settings</string>
    <string name="paquete_registro">Compra de paquete</string>
    <string name="registrar">Registrar</string>
    <string-array name="nivel">
        <item>Primaria</item>
        <item>Secundaria</item>
        <item>Prepa</item>
        <item>Universidad</item>
    </string-array>

    <string-array name="opcionesBuscador">
        <item>Nombre</item>
        <item>Id</item>
        <item>Paquete</item>
        <item>Horas</item>
    </string-array>

    <string-array name="opcionesBuscadorAsesorias">
        <item>materia</item>
        <item>maestro</item>
        <item>fecha</item>
        <item>nivel</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="salir">Registrar Salida</string>
    <string name="entrar">Registrar Entrada</string>
    <string name="horario">Horario</string>
    <string name="msj_sin_registros">No se encontraron alumnos</string>
    <string name="alumno">Alumno</string>
    <string name="maestro">Maestro</string>
    <string name="id">id</string>
    <string name="nombre_padre">Nombre del Padre ó Tutor :</string>
    <string name="telefono_padre">Teléfono del Padre ó Tutor :</string>
    <string name="nombre_alumno">Nombre del Alumno :</string>
    <string name="nombre_maestro">Nombre del Maestro  :</string>
    <string name="telefono_maestro">Teléfono del Maestro :</string>
    <string name="domicilio">Domicilio :</string>
    <string name="Primaria">Primaria</string>


</resources>

