<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baseAplicacion"
    android:baselineAligned="true"
    android:orientation="vertical"
    tools:context=".ui.activities.registroAlumno.AltaAlumnActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_cv_contact_maestro"
                android:background="@drawable/profile_borde_image"
                android:layout_width="137dp"
                android:layout_height="137dp"
                android:padding="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/professor_icon28" />

            <ImageButton
                android:id="@+id/ib_camera_maestro"
                android:src="@drawable/camara"
                android:scaleType="centerCrop"
                android:layout_width="100dp"
                android:layout_height="80dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nombre_maestro" />

                        <EditText
                            android:id="@+id/et_alta_maestro_nombre"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/domicilio" />

                        <EditText
                            android:id="@+id/et_alta_maestro_domicilio"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/telefono_maestro" />

                        <EditText
                            android:id="@+id/et_alta_maestro_telefono"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:gravity="center_horizontal"
                android:textSize="15sp"
                android:text="@string/horario"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioGroup
                android:id="@+id/rg_maestro_horario"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbtn_matutino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/news_rbtn_selector"
                    android:button="@null"
                    android:checked="true"
                    android:fontFamily="bold"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="Matutino"
                    android:textColor="@drawable/news_rbtn_textcolor_selector"
                    android:textSize="13dp" />

                <RadioButton
                    android:id="@+id/rbtn_vespertino"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/news_rbtn_selector_ni"
                    android:button="@null"
                    android:fontFamily="bold"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="Vespertino"
                    android:textColor="@drawable/news_rbtn_textcolor_selector"
                    android:textSize="13dp" />

            </RadioGroup>


            <Button
                android:id="@+id/btn_registrar_maestro"
                android:textAllCaps="false"
                android:layout_marginTop="25dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"

                android:background="@drawable/btn"
                android:text="@string/registrar"
                android:textColor="@color/news_white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
